# llamahat

./: .clang-format  .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
csrc/: cuda_buffers.cu  exllama_ext.cpp
csrc/cpu_func/: rep_penalty.cpp
csrc/cuda_func/: column_remap.cu  half_matmul.cu  q4_attn.cu  q4_matmul.cu  q4_matrix.cu  q4_mlp.cu  rms_norm.cu  rope.cu
csrc/include/: cuda_buffers.cuh  cuda_compat.cuh  hip_compat.cuh  matrix.cuh  tuning.h  util.cuh
csrc/include/func/: column_remap.cuh  half_matmul.cuh  q4_attn.cuh  q4_matmul.cuh  q4_matrix.cuh  q4_mlp.cuh  rep_penalty.h  rms_norm.cuh  rope.cuh
src/llamahat/: __init__.py  __main__.py  app.py  cext.pyi  cuda_ext.py  generator.py  lora.py  perplexity.py  tokenizer.py
src/llamahat/model/: __init__.py  model.py  settings.py
