[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64.0.0",
    "wheel",
    "setuptools_scm[toml]>=7.1.0",
    "cmake>=3.26.0",
    "ninja>=1.11.0",
    "torch>=2.0.0",
]

[tool.setuptools_scm]
write_to = "src/llamahat/_version.py"

[tool.black]
line-length = 110
target-version = ['py310']

[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 110
target-version = 'py310'
ignore = ['F841', 'F401', 'E501']
exclude = ['src/llamahat/_version.py']


[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = ["llamahat"]
known-third-party = ["torch", "setuptools"]

[tool.pyright]
include = ['src/**']
stubPath = './typings'
