[metadata]
name = llamahat
author = Andi Powers-Holmes
email = aholmes@omnom.net
maintainer = Andi Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find_namespace:
package_dir =
    = src
py_modules =
    llamahat
include_package_data = True
install_requires =
    colorama >= 0.4.3, < 0.5.0
    ninja >= 1.11.0, < 2.0.0
    pybind11 >= 2.10.4, <2.11.0
    rich >= 13.0.0, < 14.0.0
    safetensors >= 0.3.1, < 0.4.0
    sentencepiece >= 0.1.97, < 0.2.0
    shellingham >= 1.5.0, < 2.0.0
    torch >= 2.0.0, < 3.0.0
    typer[all] >= 0.9.0, < 1.0.0

[options.packages.find]
where = src

[options.package_data]
* =
    *.css
    *.json
    *.js
    *.md
    *.txt

[options.exclude_package_data]
* =
    .gitattributes
    .gitignore
    .editorconfig

[options.extras_require]
dev =
    black >= 22.3.0
    cmake >= 3.26.0
    mypy >= 0.981
    ninja >= 1.11.0
    ruff >= 0.0.234
    setuptools-scm[toml] >= 7.0.0
web =
    fastapi >= 0.98.0, < 1.0.0
    uvicorn >= 0.22.0, < 1.0.0

[options.entry_points]
console_scripts =
    llamahat = llamahat.app:app

[flake8]
max-line-length = 110
ignore =
    # these are annoying during development but should be enabled later
    F401 # module imported but unused
    F841 # local variable is assigned to but never used
    # black automatically fixes this
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv
